# oribos

./: AUTHORS  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
oribos/: _version.py  oribos.py
releases/: 0.2.0.md  0.2.1.md
releases/unreleased/: added-leader-information.yml  include-race-information.yml  test-changelog-is-working-fine.yml
tests/: test_oribos.py
