[tool.poetry]
name = "oribos"
version = "0.2.1"
description = "A sample Python package"
authors = ["A. Random Developer <author@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
